<resources>
    <string name="equipoanalizado">Equipo analizado: </string>
    <string name="app_name">Mantenimiento</string>
    <string name="ip">IP</string>
    <string name="auditoria">Auditoría</string>
    <string name="administrador">Administrador</string>
    <string name="operario">Operario</string>
    <string name="equpios">Equipos</string>
    <string name="inspecciondiaria">Inspección Diaria</string>
    <string name="Estado">Estado Del Equipo</string>
    <string name="sininconvenientes">Sin Inconvenientes</string>
    <string name="coninconvenientes">¿Presenta Inconvenientes?</string>
    <string name="sepuedetrabajar">Es Posible Trabajar</string>
    <string name="sesoluciono">¿Se Dio Solución?</string>
    <string name="generaotm">¿Generar Orden de Trabajo?</string>
    <string name="guardarinsp">Guardar Inspección</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="descripcion">Descripción del Inconveniente</string>
    <string name="solotm">Solicitar OTM</string>
    <string name="usuario">Ususario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="ejecutaOTM">Ejecutar OTM</string>
    <string name="tipoOTM">Prioridad</string>
    <string name="asignaOTM">Asignar OTM a:</string>
    <string name="enviarsolicitud">Enviar Solicitud</string>
    <string name="ingresardaños">Ingresar daños presentados</string>
    <string name="parte">Parte Averiada</string>
    <string name="anomalia">Anomalía que presenta</string>
    <string name="causa">Posible causa de la avería</string>
    <string name="ingresecausa">Ingrese posible causa de la avería</string>
    <string name="control">Control a efectuar</string>
    <string name="ingresecontrol">Ingrese control a efectuar</string>
    <string name="enviarynuevo">Enviar y efectuar nuevo control</string>
    <string name="efectospresentados">Efectos que presenta</string>
    <string name="ingreseefectospresentados">Ingrese efectos que presenta</string>
    <string name="terminaraverias">regresar a la solicitud de OTM</string>
    <string name="cronograma">Cronograma</string>
    <string name="guardar">Guardar</string>
    <string name="mantenimientos">Mantenimientos</string>
    <string name="calendario">Calendario</string>
    <string name="guiasol">Guía para la solución del problema</string>
    <string name="modofalla">¿Cual es el modo en que falla?</string>
    <string name="ingresemodofalla">Ingrese el modo en que falla</string>
    <string name="piezafalla">posible pieza que falla</string>
    <string name="ingresepiezafalla">Ingrese posible pieza que falla</string>
    <string name="controlesrealizados">Controles ya realizados</string>
    <string name="ingresarinsumos">Ingresar Insumos</string>
    <string name="fechainicio">Fecha de inicio</string>
    <string name="Horafin">Hora de finalización</string>
    <string name="Horaicinio">Hora de Inicio</string>
    <string name="fechafin">Fecha de finalización</string>
    <string name="costoMano">Costo Mano de Obra</string>
    <string name="enviardatos">Enviar Datos</string>
    <string name="insumosadquiridos">Insumos Adquiridos</string>
    <string name="cantidad">Cantidad</string>
    <string name="referencia">Referencia</string>
    <string name="preciounitario">Precio Unitario</string>
    <string name="enviarynuevoinsumo">Enviar y Agregar Nuevo Insumo</string>
    <string name="semanal">Semanal</string>
    <string name="quincenal">Quincenal</string>
    <string name="mensual">Mensual</string>
    <string name="trimestral">Trimestral</string>
    <string name="semestral">Semestral</string>
    <string name="cierredia">Cierre Diario</string>
    <string name="anual">Anual</string>
    <string name="regresaejecuciondeotm">Regresar a ejecución de OTM</string>
    <string name="mantenimientorealizado">Mantenimiento Realizado</string>
    <string name="iniciarmant">Iniciar Mantenimiento</string>
    <string name="siguiente">Siguiente</string>
    <string name="nuevo">Nuevo</string>
    <string name="existente">Existente</string>
    <string name="escribaelefectopresentado">Escriba el efecto presentado</string>
    <string name="solu">Ingrese la solución</string>

</resources>
