<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Mantenimiento="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/insdia"
        android:title="@string/inspecciondiaria"
        android:orderInCategory="100" />

    <item android:id="@+id/genotm"
        android:title="@string/solotm"
        android:orderInCategory="100" />

    <item android:id="@+id/ejeotm"
        android:title="@string/ejecutaOTM"
        android:orderInCategory="100" />

    <item android:id="@+id/calendario"
        android:title="@string/calendario"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_my_calendar"
        Mantenimiento:showAsAction="always"/>

    <item android:id="@+id/mantenimientos"
        android:title="@string/mantenimientos"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        Mantenimiento:showAsAction="always"/>

</menu>