<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mantenimientos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oneapp.Mantenimiento.Mantenimientos"
    android:orientation="vertical"
    android:background="@drawable/fondomantenimientos">

    <Button
        android:id="@+id/semanal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/semanal"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/quincenal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/quincenal"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/mensual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/mensual"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/trimestral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/trimestral"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/semestral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/semestral"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/anual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"
        android:text="@string/anual"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
