<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_averias_otm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oneapp.Mantenimiento.AveriasOTM"
    android:orientation="vertical"
    android:background="@drawable/fondoaveria"
    >

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prueba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblanco"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/Layefecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/efectospresentados"
                    android:textSize="20sp"
                    android:textColor="@color/colorblanco"
                    android:layout_marginTop="10dp"/>
                <Spinner
                    android:id="@+id/efecto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/spinner"
                    android:popupBackground="@color/grisoscuro">
                </Spinner>
                <EditText
                    android:id="@+id/txtefecto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorblanco"
                    android:hint="@string/ingreseefectospresentados"
                    android:textColorHint="@color/colorfondo"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modofalla"
                android:textSize="20sp"
                android:textColor="@color/colorblanco"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/modo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner"
                android:popupBackground="@color/grisoscuro">
            </Spinner>
            <EditText
                android:id="@+id/txtmodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblanco"
                android:hint="@string/ingresemodofalla"
                android:textColorHint="@color/colorfondo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piezafalla"
                android:textSize="20sp"
                android:textColor="@color/colorblanco"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/pieza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner"
                android:popupBackground="@color/grisoscuro">
            </Spinner>
            <EditText
                android:id="@+id/txtpieza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblanco"
                android:hint="@string/ingresepiezafalla"
                android:textColorHint="@color/colorfondo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/causa"
                android:textSize="20sp"
                android:textColor="@color/colorblanco"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/causa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner"
                android:popupBackground="@color/grisoscuro">
            </Spinner>
            <EditText
                android:id="@+id/txtcausa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblanco"
                android:hint="@string/ingresecausa"
                android:textColorHint="@color/colorfondo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control"
                android:textSize="20sp"
                android:textColor="@color/colorblanco"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner"
                android:popupBackground="@color/grisoscuro">
            </Spinner>
            <EditText
                android:id="@+id/txtcontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblanco"
                android:hint="@string/ingresecontrol"
                android:textColorHint="@color/colorfondo"/>

            <Button
                android:id="@+id/envaverias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviarynuevo"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorblanco"
                android:background="@drawable/botones"/>
            <Button
                android:id="@+id/regresaraOTM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terminaraverias"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorblanco"
                android:background="@drawable/botones"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
