<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_otm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oneapp.Mantenimiento.Otm"
    android:orientation="vertical"
    android:background="@drawable/fondoasigotm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solotm"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorblanco"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/guiasol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/guiasol"
        android:textSize="20sp"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"/>

    <LinearLayout
        android:id="@+id/LaySolOTM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:text="@string/tipoOTM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorblanco"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Tipo"
        android:layout_marginTop="5dp"
        android:popupBackground="@color/grisoscuro"
        android:background="@drawable/spinner"/>

    <TextView
        android:text="@string/asignaOTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:textColor="@color/colorblanco"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/asigna"
        android:popupBackground="@color/grisoscuro"
        android:background="@drawable/spinner"/>

    <Button
        android:id="@+id/SolOTM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/enviarsolicitud"
        android:textSize="20sp"
        android:background="@drawable/botones"
        android:textColor="@color/colorblanco"/>

    </LinearLayout>
</LinearLayout>
